# pass

./: .gitmodules  BUILD  CMakeLists.txt  CMakePresets.json  MODULE.bazel  requirements.in  requirements.txt
data/: BUILD  CMakeLists.txt
src/: CMakeLists.txt
src/download/: BUILD  download.py
src/download_file/: CMakeLists.txt  download_file
src/pass/: BUILD  CMakeLists.txt  main.cpp
